# bpe-summarizer

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
notebooks/: Evaluation Single Sentence.ipynb  Evaluation.ipynb
src/: bpe_summarizer.py  utils.py
summarizer/: Evaluation.ipynb  __init__.py  summarizer.py
summarizer/notebooks/: Evaluation.ipynb
summarizer/tests/: test_summarizer.py  test_utils.py
summarizer/validation/: validation.py
tests/: test_summarizer.py  test_utils.py
validation/: validation.py
