[tool.poetry]
name = "bpe-summarizer"
version = "0.1.0"
description = ""
authors = ["crodriguez1a <crodriguez1a@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^2.11.0"
argparse = "^1.4.0"
nltk = "^3.5"
rouge = "^1.0.0"
torch = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
jupyter = "^1.0.0"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.780"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
tensorflow = "^2.2.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
