[tool.poetry]
name = "bpe-summarizer"
version = "0.1.3"
description = "This summarizer attempts to leverage Byte Pair Encoding (BPE) tokenization and the Bart vocabulary to filter text by semantic meaningfulness."
authors = ["crodriguez1a <crodriguez1a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/crodriguez1a/bpe-summarizer"
homepage = "https://github.com/crodriguez1a/bpe-summarizer"
include = ["src/nltk_data/corpora/stopwords/english", "src/utils.py"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^2.11.0"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
jupyter = "^1.0.0"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.780"
pandas = "^1.0.4"
matplotlib = "^3.2.1"
tensorflow = "^2.2.0"
flake8 = "^3.8.3"
torch = "^1.5.0"
rouge = "^1.0.0"
argparse = "^1.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
